hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_setIteratorMode_param_SplDoublyLinkedList.php
<?php
$dll = new SplDoublyLinkedList(2);
$dll->setIteratorMode(new SplDoublyLinkedList(2));
?>